# DoodleJump

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: Entity.cpp  Entity.h  GameConfig.cpp  GameConfig.h  GameManager.cpp  GameManager.h  ResourceManager.cpp  ResourceManager.h  framework.cpp  framework.h  source.cpp
